# agentopolis

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  hooks.py  justfile  pyproject.toml  server.py
.github/workflows/: release.yml  uptime.yml
agentopolis/: bake.py  cli.py  forge.py  hooks.py  nation.py  og.py  prewarm.py  scout.py  seed.py  server.py  survey.py  timeline.py  zone.py
agentopolis/static/: city-live.js  city-render.js  city-scape.js  city-timelapse.js  hall.js  hotel.js  index.html  marathon.js  nation.js  render.js  robots.txt  share.js  sitemap.xml  touch.js  tour.js
botapest/: cli.py  nation.py  seed.py  server.py  zone.py
botapest/static/: city-live.js  city-render.js  city-scape.js  city.html  city.js  hall-tiers.js  hall.js  hotel.js  index.html  nation.js  render.js
city/: example.json  maisight.json
docs/: building-vocabulary-proposal.md  legibility-feedback.md  mobile-virality-plan.md  tour.md  virality-v2-gaps.md
static/: city-data.json  hotel.js  index.html  render.js
tests/: test_e2e.py  test_lib.py  test_server.py  test_ui.py
