[project]
name = "agentopolis"
version = "0.9.0"
description = "Agentopolis — Habbo-style visualization of Claude Code agents building your repo as a city"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "LeChristopher Blackwell", email = "codeblackwell@gmail.com" }]
keywords = ["claude-code", "visualization", "agents", "isometric", "pixel-art"]
requires-python = ">=3.11"
dependencies = ["fastapi>=0.110", "uvicorn>=0.29"]

[project.urls]
Homepage = "https://github.com/CodeBlackwell/agentopolis"
Source = "https://github.com/CodeBlackwell/agentopolis"
Issues = "https://github.com/CodeBlackwell/agentopolis/issues"

[project.scripts]
agentopolis = "agentopolis.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# showcase/ (baked demo fixtures) and bake.py (local-only fixture generator) ship
# with the Docker demo via COPY, never to CLI users — keep them out of both artifacts
[tool.hatch.build.targets.wheel]
packages = ["agentopolis"]
exclude = ["agentopolis/showcase", "agentopolis/bake.py"]

[tool.hatch.build.targets.sdist]
exclude = ["agentopolis/showcase", "agentopolis/bake.py"]
